finished rereading rashba

--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -483,9 +483,9 @@ This in turn causes the numerical analogue of the Peierls-Nabarro barrier.
 Since we implemented our own version of the Finite Element Method, we first performed some consistency checks with previous calculations before turning to the simulations of the DW softening.
 
 The DW energy we obtained is 15.2 mJ/m$^2$, very close to the value of 16 mJ/m$^2$ previously found from a first-principles calculation in Ref.~\cite{Padilla1996}.
-Furthermore, We furthermore verified that it is not influenced by the size of the numerical geometry or the density of the mesh, indicating that the numerics of our method does not influence energetics of the static wall.
+Furthermore, we verified that it is not influenced by the size of the numerical geometry or the density of the mesh, indicating that the numerics of our method does not influence energetics of the static wall.
 
-To furthermore confirm the existence and consistent behavior of the numerical Peierls-Nabarro barriers, we performed simulations where we rigidly shifted the wall from its central position inside the grid, similar to the procedure followed in Ref.~\cite{Marton2018}.
+To confirm the existence and consistent behavior of the numerical Peierls-Nabarro barriers, we performed simulations where we rigidly shifted the wall from its central position inside the grid, similar to the procedure followed in Ref.~\cite{Marton2018}.
 The energy was then calculated at each step in order to get an indication of the numerical Peierls-Nabarro barriers of our mesh.
 The results for different element sizes are shown in Fig.~\ref{fig:BTO_numerical_effects}(c,d).
 The barriers are very close to the harmonic shape of the real Peierls-Nabarro barriers for all element sizes, where larger sizes lead to larger barrier energies and periodicity, as expected.
