--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6778,3 +6778,15 @@ volume = {5},
 year = {2009}
 }
 
+@article{Krempasky2020,
+author = {Krempask{\'{y}}, Juraj and Fanciulli, Mauro and Nicola{\"{i}}, Laurent and Min{\'{a}}r, Jan and Volfov{\'{a}}, Henrieta and Caha, Ondřej and Volobuev, Valentine V. and S{\'{a}}nchez-Barriga, Jaime and Gmitra, Martin and Yaji, Koichiro and Kuroda, Kenta and Shin, Shik and Komori, Fumio and Springholz, Gunther and Dil, J. Hugo},
+doi = {10.1103/physrevresearch.2.013107},
+file = {:home/ponet/Downloads/PhysRevResearch.2.013107.pdf:pdf},
+journal = {Physical Review Research},
+number = {1},
+pages = {1--7},
+title = {{Fully spin-polarized bulk states in ferroelectric GeTe}},
+volume = {2},
+year = {2020}
+}
+
